data/gtk/style.css
@define-color card_bg_color #ffffff;
@define-color card_fg_color @theme_fg_color;
@define-color card_border_color alpha(currentColor, .18);

.transparent {
  background-color: transparent;
}

.tile {
  padding: 0px;
  border-radius: 12px;
  border: 1px solid @card_border_color;
  color: @card_fg_color;
  background-color: @card_bg_color;
  background-clip: padding-box;
  transition: background 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
}

.tile:hover {
  background-image: image(alpha(currentColor, .03));
}

.tile:active   {
  background-image: image(alpha(currentColor, .08));
}

.favicon-big {
  border-radius: 8px;
  border: none;
  box-shadow: 0 4px 5px 1px alpha(black, .2),
              0 0 0 1px alpha(black, .15);
}

.smallcover {
  background-color: @theme_base_color;
}

.toolbarcontroller {
  border-top: 1px solid @borders;
}

.featured-carousel {
  border-radius: 8px;
  color: white;
}

.featured-carousel.dark-foreground {
  color: rgba(0, 0, 0, .75);
 }

.carousel-banner {
  padding: 0px;
}

.carousel-banner-title {
  transition: color 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
}

.carousel-button {
  padding: 8px;
  min-width: 30px;
  min-height: 30px;
  margin: 6px;
}

.mini-controller {
  background-image: url('resource://de/haeckerfelix/Shortwave/images/wood.png');
  background-size: cover;
  color: black;
  /* Use dark variant shadow */
  box-shadow: 0 1px 3px 3px transparent,
              0 2px 8px 2px rgba(0, 0, 0, 0.13),
              0 3px 20px 10px rgba(0, 0, 0, 0.09),
              0 6px 32px 16px rgba(0, 0, 0, 0.04),
              0 0 0 1px rgba(0, 0, 0, 0.75);
  outline-color: rgba(255, 255, 255, 0.1);
}

.mini-controller:backdrop {
  box-shadow: 0 1px 3px 3px rgba(0, 0, 0, 0.09),
              0 2px 14px 5px rgba(0, 0, 0, 0.05),
              0 4px 28px 12px rgba(0, 0, 0, 0.03),
              0 6px 32px 16px transparent,
              0 0 0 1px rgba(0, 0, 0, 0.75);
}

/* Based on the styling from Pebbles by Subhadeep Jasu */
/* https://github.com/SubhadeepJasu/pebbles/blob/e8159b8e73f2ceb3597c8fe37fe338ba1fb6f50c/data/Application.css */
.mini-controller-display {
  background-image: linear-gradient(#b6bfb6, #dae6da);
  border-radius: 12px;
  border: 1px solid alpha(black, 1);
  padding-top: 3px;
  box-shadow: inset 0px 1px 8px 0px alpha(black, 0.5),
              inset 0px 0px 2px 1px alpha(black, 0.5),
              0px 1px 0px 0px alpha(white, 0.3),
              0px -1px 0px 0px alpha(black, 0.15);
}

.mini-controller-button,
.mini-controller-volume-button > button {
  background-image: url('resource://de/haeckerfelix/Shortwave/images/metal.png');
  background-size: cover;
  color: black;
  border: 1px solid alpha(black, 1);
}

.mini-controller-volume-button > button {
  border-radius: 100%;
  padding: 0;
  min-width: 34px;
  min-height: 34px;
}

